src/objects/BecaConvenioAsignacion__c.object
<CustomObject>
    <description>Relaciona los registros de beca convenio con diferentes planteles, niveles y programas</description>
    <fields>
        <fullName>Baja__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Baja</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BecaConvenio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beca Convenio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Beca__c.TipoBeca__c</field>
                <operation>equals</operation>
                <value>Convenio</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Beca__c</referenceTo>
        <relationshipName>Becas_Convenio_Asignaci_n</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Descuento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Descuento</label>
        <referenceTo>Descuento__c</referenceTo>
        <relationshipName>Becas_Convenio_Asignaci_n</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <label>Final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IdBeca__c</fullName>
        <externalId>true</externalId>
        <label>IdBeca</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incrementos__c</fullName>
        <label>Incrementos</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inicial__c</fullName>
        <label>Inicial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Letra__c</fullName>
        <globalPicklist>CategoriaLetra</globalPicklist>
        <label>Letra</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ModalidadTodas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modalidad Todas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modalidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modalidad</label>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipName>Becas_Convenio_Asignaci_n1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NivelTodos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nivel Todos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nivel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Nivel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipName>Becas_Convenio_Asignaci_n</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Periodo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Periodo</label>
        <referenceTo>Periodo__c</referenceTo>
        <relationshipName>Becas_Convenio_Asignaci_n</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodosTodos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Todos los periodos</description>
        <label>Periodos Todos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlantelTodos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plantel Todos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plantel</label>
        <referenceTo>Plantel__c</referenceTo>
        <relationshipName>Becas_Convenio_Asignaci_n</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PorcentajeBeca__c</fullName>
        <label>% beca</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProgramaTodos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Programa Todos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Programa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programa</label>
        <referenceTo>Programa__c</referenceTo>
        <relationshipName>Becas_Convenio_Asignaci_n</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo_de_porcentaje__c</fullName>
        <label>Tipo de %</label>
        <picklist>
            <picklistValues>
                <fullName>Fijo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rango</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Asignación Beca Convenio/Descuento</label>
    <nameField>
        <label>Asignación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asignaciones Beca Convenio/Descuento</pluralLabel>
    <recordTypes>
        <fullName>BecaConvenio</fullName>
        <active>true</active>
        <label>Beca convenio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Descuento</fullName>
        <active>true</active>
        <label>Descuento</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>